--- a/namescroll/index.html
+++ b/namescroll/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>SRA Name Scroll Tool</title>
+		<title>Scroll Tool</title>
 		<style>
 			#namescroll
 			{
