--- a/namescroll/index.html
+++ b/namescroll/index.html
@@ -79,7 +79,7 @@
 		let color = getParameter ('color', parameters);
 		let colour = getParameter ('colour', parameters);
 		
-		setColour (colour ?? color, namescroll);
+		setColour (colour ?? color ?? "white", namescroll);
 
 		let timeout = 15000;
 		
