--- a/namescroll/index.html
+++ b/namescroll/index.html
@@ -169,7 +169,7 @@
 			return platforms;
 		}
 		
-		function platformsPush (word, array)
+		function platformPush (word, array)
 		{
 			if (word !== null && word !== undefined)
 			{
